--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ FLASK_APP = server.py
 FLASK_ENV = development
 FLASK_RUN_PORT = 8000
 FLASK_MONGO = mongodb://localhost:27017
+SECRET_KEY = acousticare
