updated requirements.txt to include pydub and ensure proper formatting

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask
-praat-parselmouth
+praat-parselmouth 
 python-dotenv
 numpy
 joblib
@@ -9,3 +9,4 @@ pandas
 tensorflow
 Flask-PyMongo
 marshmallow
+pydub
